--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main, master ]
 
+permissions:
+  contents: read
+  checks: write
+  pull-requests: write
+
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -57,7 +62,9 @@ jobs:
 
     - name: Publish Test Results
       uses: dorny/test-reporter@v1
-      if: always()
+      if: |
+        always() &&
+        (github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false)
       with:
         name: Pester Tests - ${{ matrix.os }} - PowerShell ${{ matrix.pwsh-version }}
         path: test-results.xml
